Task7/gatekeeper/constraint-templates/hostpath.yaml
# ConstraintTemplate для запрета hostPath volumes.
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8spshostpath
spec:
  crd:
    spec:
      names:
        kind: K8sPSHostPath
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8spshostpath

        violation[{"msg": msg}] {
          v := input.review.object.spec.volumes[_]
          v.hostPath
          msg := sprintf("HostPath volume is not allowed: %v (path=%v)", [v.name, v.hostPath.path])
        }
