Task7/gatekeeper/constraint-templates/privileged.yaml
# ConstraintTemplate для запрета privileged-контейнеров.
# Создаёт CRD K8sPSPrivileged. После apply этого template можно создавать
# объекты типа K8sPSPrivileged (см. constraints/privileged.yaml).
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8spsprivileged
spec:
  crd:
    spec:
      names:
        kind: K8sPSPrivileged
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8spsprivileged

        violation[{"msg": msg}] {
          c := input.review.object.spec.containers[_]
          c.securityContext.privileged == true
          msg := sprintf("Privileged container is not allowed: %v", [c.name])
        }

        violation[{"msg": msg}] {
          c := input.review.object.spec.initContainers[_]
          c.securityContext.privileged == true
          msg := sprintf("Privileged init container is not allowed: %v", [c.name])
        }
